--- a/css/main.css
+++ b/css/main.css
@@ -1,89 +1,228 @@
-.flex-item {
-    display: flex;
-    align-items: center;
-}
-.flex-item img{
-    flex-grow:0;
-    flex-shrink:0;
-}
-.widget {
-    display: flex;
-    align-items: center;
-}
-h1.ariel {
-    font-family: Arial, Helvetica, sans-serif;
-}
-div.ariel {
-    font-family: Arial, Helvetica, sans-serif;
-}
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #7289DA;
+body {
+    font-family: 'Poppins', sans-serif !important;
+    background-color: #1D1E28;
+    color: #fff;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+    border-top: 6px #ff9956 solid !important;
+    font-size: 16px;
 }
 
-li {
-    float: right;
-    border-right:1px solid #7289DA;
+.nav-link {
+     font-size: 14px !important;
+     background: transparent !important;
+     font-family: Lato, sans-serif !important;
+     text-transform: capitalize !important;
+ }
+ .nav-link:hover {
+     background: transparent !important;
+     color: #ff9956 !important;
+     font-weight: bold !important;
+ }
+
+ .login-btn {
+     border: 2px solid #ff9956 !important;
+     font-size: 10px !important;
+ }
+ .login-btn:hover {
+     background: #ff9956 !important;
+ }
+.navbar {
+    box-shadow: none !important
 }
 
-li:last-child {
-    border-right: none;
+.navbar-brand {
+    font-size: 25px !important
 }
 
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+.navbar-toggler-icon {
+    color: #fff !important
 }
 
-li a:hover:not(.active) {
-    background-color: #7289DA;
-}
-
-.active {
-    background-color: #2C2F33;
-}
-.synx-table {
-    position: absolute;
-    width: 100%;
-    color: white;
-    margin-top: 150px;
-}
-.synx-table {
-    margin-top: 100px;
-}
 .btn {
-  background: #7288da;
-  background-image: -webkit-linear-gradient(top, #7288da, #7288da);
-  background-image: -moz-linear-gradient(top, #7288da, #7288da);
-  background-image: -ms-linear-gradient(top, #7288da, #7288da);
-  background-image: -o-linear-gradient(top, #7288da, #7288da);
-  background-image: linear-gradient(to bottom, #7288da, #7288da);
-  -webkit-border-radius: 17;
-  -moz-border-radius: 17;
-  border-radius: 17px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 20px;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
+    border-radius: 10px !important;
+    font-size: 16px !important;
+    font-weight: 600 !important;
+    text-transform: uppercase !important;
 }
 
-.btn:hover {
-  background: #7288da;
-  background-image: -webkit-linear-gradient(top, #7288da, #7288da);
-  background-image: -moz-linear-gradient(top, #7288da, #7288da);
-  background-image: -ms-linear-gradient(top, #7288da, #7288da);
-  background-image: -o-linear-gradient(top, #7288da, #7288da);
-  background-image: linear-gradient(to bottom, #7288da, #7288da);
-  text-decoration: none;
+.btn-primary {
+    background-color: #ff9956!important
 }
-a {
-  color: white;
-  text-decoration: none; /* no underline */
+.btn-secondary {
+    background-color: #2C2F33 !important
+}
+.heading {
+    padding: 160px 50px !important;
+    color: #fff !important;
+    background-image: url("../assets/wavy-purple-by-madness.svg") !important;
+    background-position: bottom !important;
+    background-size: 205% !important;
+    background-repeat: no-repeat !important;
+}
+
+b{
+    color: orangered;
+}
+
+.headingabout {
+    padding: 160px 50px !important;
+    color: #fff !important;
+}
+
+.title {
+    line-height: 90px !important;
+    margin-bottom: -2px !important;
+    font-size: 36px !important
+}
+
+.subtitle {
+    color: rgba(255, 255, 255, 0.685) !important;
+    font-size: 16px !important;
+    font-family: 'Lato', sans-serif;
+}
+
+
+.features {
+    text-align: center !important;
+    background: #ff9956 !important;
+    padding: 60px 50px !important;
+    background-image: url("../assets/wavy-purple-by-madness.svg") !important;
+    background-position: bottom !important;
+    background-size: 150% !important;
+    background-repeat: no-repeat !important;
+}
+
+.features .title {
+    font-size: 40px !important;
+    color: #ffffff !important;
+    line-height: 70px !important;
+}
+
+.features .subtitle {
+    font-size: 20px !important;
+    color: #a2a8bd;
+}
+
+.features .card-body {
+    text-align: left !important;
+}
+
+.features .card-title {
+    margin: 0 0 -3px !important;
+}
+.cards {
+    margin-top: 30px !important;
+}
+
+.card {
+    border-radius: 5px !important;
+    box-shadow: none !important;
+}
+
+.card-title {
+    font-size: 28px !important;
+    font-weight: 600 !important;
+    color: #ff9956 !important;
+}
+
+.statistics {
+    text-align: center !important;
+    padding-top: 300px !important;
+}
+
+.statistics .card-body{
+    padding: 0 !important;
+    height: 500 !important;
+    width: 332 !important;
+    max-height: 280 !important;
+    max-width: 332 !important;
+}
+
+.statistics .title {
+    font-size: 40px !important;
+    color: #ffffff !important;
+    line-height: 70px !important;
+}
+
+.statistics .subtitle {
+    font-size: 20px !important;
+    color: #a2a8bd;
+}
+
+.card.statistic {
+    background: transparent !important;
+    box-shadow: none !important;
+    color: #f7f7f7 !important;
+}
+
+
+.page_end {
+    background-image: url("../assets/wavy-light-by-madness.svg") !important;
+    background-position: bottom !important;
+    background-size: 150% !important;
+    background-repeat: no-repeat !important;
+}
+.start {
+    padding: 60px 50px !important
+}
+
+.start .card {
+    background: transparent !important;
+    color: #f6f9ff !important;
+}
+
+.features .card {
+    background: #1D1E28;
+    border-radius: 22px !important;
+    border: 4px solid #ff9956;
+}
+.features .card-text {
+color: rgba(255, 255, 255, 0.46) !important
+}
+
+.features .card-body {
+    padding: 40px 40px 40px 30px !important;
+}
+
+.navbar-toggler-icon {
+    color: #fff !important
+}
+.footer {
+    text-align: center !important;
+    padding: 5px 6px !important;
+    color: #ecf2ff;
+    padding: 30px 30px !important
+}
+
+.footer .madness {
+    font-family: 'Montserrat' !important;
+    font-style: normal !important;
+    font-weight: 600 !important;
+    font-size: 16px !important;
+    line-height: 5px !important;
+    letter-spacing: 0.15em !important;
+    font-variant: small-caps !important;
+}
+
+.footer .madness a {
+    color: #ff9956 !important;
+    text-decoration: none !important;
+}
+
+.footer .bot-footer {
+    text-align: center !important;
+    color: #a2a8bd !important
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+}
+  
+  /* Hide scrollbar for IE, Edge add Firefox */
+.scrollbar-hidden {
+    -ms-overflow-style: none;
+    scrollbar-width: none; /* Firefox */
 }
